--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/theory/BinPackingProblem.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/theory/BinPackingProblem.tex
@@ -33,9 +33,9 @@ The algorithms above are very ineffective because the biggest objects might be p
 The First Fit Decreasing algorithm takes this into account and sorts the list before attempting to pack the items. This way the biggest items will be packed first.
 
 \subsection{Best Fit Decreasing(BFD)}
-Again this is the same as the Best Fit algorithm, but with the list being sorted before attempting to pack the objects.
+Again this is the same as the Best Fit algorithm, but with the list being sorted before attempting to pack the objects. The list is sorted by size of the items, in decreasing order. 
 
 \subsection{Summing Up}
 It seems that it is more effective to sort by decreasing size the lists before attempting to pack objects into bins. This way bigger objects are packed first, and the smaller objects can then be fitted around the bigger objects. However in some situations it is necessary to use unsorted lists. For example in a factory with continuous production, it is never possible to have the complete list of objects, and thus never possible to sort the list. This theory can be used to form the algorithm of this project, and use the others mathematical experiences as a benefit.
-\section{Comparison between Knapsack Problem and Binpacking Problem.}
-The main difference between the knapsack problem, see section \ref{sec:knapsack}, and the bin packing problem, is that with the knapsack problem a list of items. Each item with its own weight and value, must be fit into a fixed-size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used. In this project the focus will be on the bin packing problem, because the goal is to pack items with given dimensions into suitcases (bins) of a given size. In other words, each item does not have a specific value - each item must be packed, which is why the bin packing problem have been chosen over the knapsack problem.
+\section{Comparison between Knapsack Problem and Binpacking Problem}
+The main difference between the knapsack problem, in section \ref{sec:knapsack}, and the bin packing problem in Section \ref{sec:binpacking}, is that with the knapsack problem a list of items is given. Each item has a weight and a value, and must be fitted into a fixed size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used. In this project the focus will be on the bin packing problem, because the goal is to pack items with given dimensions into suitcases (bins) of a given size. In other words, each item does not have a specific value - each item must be packed, which is why the bin packing problem have been chosen over the knapsack problem.
