--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/theory/Knapsackproblem.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/theory/Knapsackproblem.tex
@@ -9,7 +9,7 @@ The knapsack problem is basically creating an algorithm which packs a list of it
 \end{equation}
 
 %\[maximize \sum\limits_{j=1}^n p_jx_j\]
-Meaning: Maximizes the total value (p) of items (j) in knapsack. Total number of items (n), the optimal solution vector (x).
+Equation \ref{eq:maximize} means: Maximize the total value (p) of items (j) in knapsack. Total number of items (n), the optimal solution vector (x).
 
 \begin{equation}
 	\label{eq:subjectto}
@@ -24,7 +24,9 @@ Meaning: Maximizes the total value (p) of items (j) in knapsack. Total number of
 \end{equation}
 
 %\[x_j \epsilon \left \{ 0,1 \right \}, j=1,...,n.\]
-Meaning: Total weight (w) of items (j) may not exceed the knapsacks capacity (c). Total number of items (n), the optimal solution vector (x).
+Equation \ref{eq:subjectto} means: The total weight (w) of items (j) may not exceed the knapsacks capacity (c). Total number of items (n), the optimal solution vector (x).
+
+The set seen in equation \ref{eq:subset}, denotes the optimal solution set. 
 
 \citep{knapsackproblems}
 \newline
