--- a/LaTeX/Rapport - NIX PILLE/indhold/design/Specificationrequirement.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/design/Specificationrequirement.tex
@@ -1,32 +1,32 @@
 \section{Specification Requirements}
 \label{sec:Spec}
-Through the problem analysis (see chapter \ref{chap:problem} it has been documented that there are strict rules regarding some forms of public transportation when going on vacation \ref{sec:LugRules}. Based on this research a list of features has been composed, which the program must fulfill to meet the base requirements \ref{sec:thesis}. Furthermore another list has also been composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirements, but rather as improvements to make the program even more ideal for the user.
+Through the problem analysis (see chapter \ref{chap:problem}) it has been documented that there are strict rules regarding some forms of public transportation when going on vacation, see section \ref{sec:LugRules}. Based on this research a list of features has been composed, which the program must fulfill to meet the base requirements, see section \ref{sec:thesis}. Furthermore another list has also been composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirements, but rather as improvements to make the program even more ideal for the user.
 
-Since it sometimes can be hard to use a new program, it is necessarily to have a guide or some instructions to the user to help them use the program the way it was designed. The guide should be short and well formulated so the user with ease can understand what to do in the program.
-The group has chosen to make it a requirement that the program should be written in C\#, since this is the language thought this semester.
-From the problem analysis it was concluded that some people have a tendency to pack their suitcase(s) too heavily and then getting fined when using transportation with limits on how much the luggage are allowed \ref{sec:overweight}. 
-This will be solved in the program in two ways. 
-Firstly the program will pack the suitcases using weight optimization - it will, if more suitcases are available, try to spread the items evenly between the suitcases. 
-Secondly a function must be made that makes it possible for the user to set a max weight for the luggage. This can help on the problem that some airplane companies have a maximum weight limit for luggage and will fine people carrying too heavy luggage. The reason that the program is not programmed to just follow a standard rule about how much the suitcase(s) are allowed to weight is because different companies have different rules.
-The program also needs to pack the best way according to the size of the suitcase(s) and item(s) so as many items as possible will be packed in the program, and that the program will not place any items outside the suitcase(s). This will help on the problem that some people have a problem with packing their suitcase(s) so everything will fit in the suitcase(s).
+Since it sometimes can be hard to use a new program, it is necessary to have a guide or some instructions for the user to help them use the program the way it was designed. The guide should be short and well formulated so the user with ease can understand what to do in the program.
+It has chosen to make it a requirement that the program should be written in C\#, since this is the language taught this semester.
+From the problem analysis it was concluded that some people have a tendency to pack their suitcase(s) too heavily and then getting fined when using transportation with limits on how much the luggage are allowed to weigh, see section \ref{sec:overweight}. 
+
+This has been solved in the program in two ways. 
+Firstly the program pack the suitcases using weight optimization - it will, if more suitcases are available, try to spread the items even between the suitcases. 
+Secondly a function must be made that makes it possible for the user to set a max weight for the luggage. This can help on the problem that airplane companies have a maximum weight limit for luggage and will fine people carrying too heavy luggage. The reason that the program is not programmed to just follow a standard rule about how much the suitcase(s) are allowed to weight is because different companies have different rules as seen on Section \ref{sec:LugRules}.
+
+The program also needs to pack the best way according to the size of the suitcase(s) and item(s) so as many items as possible will be packed in the program, and that the program should not place any items outside the suitcase(s). This helps on the problem that some people have with packing their suitcase(s) so everything will fit in the suitcase(s), which is documented in Section \ref{sec:overweight}.
 To make the program more user friendly a list of all the items to be packed should be included and be able to be edited so the user can get a better overview on what they are asking the program to pack.
-To help the user through the process of packing the suitcase(s) the program will need to show the user where to put the items in the suitcase(s). This is a very essential feature in the program since if the user is not able to see or get a description of where where to put the items, the program will not in any way help the problem.
-Another thing that is essential for the program is that the user will be able to update the program and the lists while away on a trip. This will be needed if the user, while away, buy anything new and/or throws anything away. This can be solved by making a save/load function so the user is able to save his/her lists on their computer and later load them. This will also enable more than one user to use the same program without having to start all over again with putting in data every time.  
+
+To help the user through the process of packing the suitcase(s) the program needs to show the user where to put the items in the suitcase(s). This is a very essential feature in the program since if the user is not able to see or get a description of where to put the items, the program does not in any way help the problem.
+
+Another thing that is essential for the program is that the user is able to run the program and pack the items in the lists while away on a trip. This is needed if the user, while away, buys anything new and/or throws anything away. This can be solved by making a save/load function so the user is able to save his/her lists on their computer and load them later. This will also enable more than one user to use the same program without having to start all over again with putting in data every time.  
 
 There are some features that are not essential for the program to work but will improve the program. 
-One of these features is to handle changeable shape of items e.g. a T-shirt or other forms of clothing. This makes the program able to pack more efficiently. This means that the program can handle solid, liquid and bendable shapes. But this may not be in the program at the beginning since this will be hard to develop and implement.
+One of these features is to handle changeable shapes of items e.g. a T-shirt or other forms of clothing. This makes the program able to pack more efficiently. This means that the program can handle solid, liquid and bendable shapes. But this may not be in the program at the beginning since this is hard to develop and implement.
 To help get a better packing and plan ahead, the program needs a list of different trip types which can help the user pack the luggage for a given type of trip.
-Another nice feature to have is to allocate space for possible souvenirs the user might buy on the trip. These features means that the user does not need to check if there are room for the souvenirs before buying it.
+Another optional feature to have is to allocate space for possible souvenirs the user might buy on the trip. These features means that the user does not need to check if there are room for the souvenirs before buying it.
 
 \subsection{Targeted Features}
-These are the essential features that the program will have.
-
-\textbf{Program Language is C\#}:
-The program will be written in C\# since this is the programming language the group is learning this semester.
-\newline
+Given below are the essential features that the program have.
 
 \textbf{Guide the User}:
-The program will have a small "read me" file, or another form of guide, which will tell the user how to use the program.
+The program has a small "read me" file, or another form of guide, which will tell the user how to use the program.
 \newline
 
 \textbf{Distribute Weight}:
@@ -38,15 +38,15 @@ The program also needs to distribute the items by space. The whole idea behind t
 \newline
 
 \textbf{On the Road}:
-The program will need to be able to be updated while away on a trip since if the user buys more or throws something away they will have the possibility to update the list and get the program to pack the suitcase(s) with the new item(s).
+The program needs to be able to repack the suitcases at any given time. Since the user might buy more or throw something away they will have the possibility to update the list and get the program to pack the suitcase(s) with the new item(s).
 \newline
 
 \textbf{Baggage Rules}:
-The program will need to have a feature that allows the user to set a weight limit, so the bag will not extend the rules about how much the suitcase(s) are allowed to weight.
+The program needs to have a feature that allows the user to set a weight limit, so the bag will not extend the rules about how much the suitcase(s) are allowed to weight.
 \newline
 
 \textbf{Structure of Packing}:
-The program will need a way of showing the user where to put all the items to pack.
+The program needs a way of showing the user where to put all the items to pack.
 \newline
 
 \textbf{Packing list}:
@@ -54,16 +54,20 @@ To make it easier for the user to know what will be packed an editable lists wil
 \newline
 
 \textbf{Save/Load function}:
-To save time a function to save and load lists of items and suitcases will be needed. This will make the program easier and faster to use since the user will not have to put in all the data about every item or suitcase every time he/she wants to use the program. It also enables more users to use the same program since they can save their own lists.
+To save time a function to save and load lists of items and suitcases will be needed. This makes the program easier and faster to use since the user will not have to put in all the data about every item or suitcase every time he/she wants to use the program. It also enables more users to use the same program since they can save their own lists.
 \newline
 
 \subsection{Optional Features}
 These features as mentioned above, are additional features that might be able to be implemented later if possible.\newline
 
 \textbf{Solid/liquid/bendable shapes}:
-The program will also take in account that items might be bendable, and therefore fit in other ways than solid items. For instance a T-shirt can be folded in many ways and thus can be considered a liquid form as it can fit almost everywhere.
+The program does also take in account that items might be bendable, and therefore fit in other ways than solid items. For instance a T-shirt can be folded in many ways and thus can be considered a liquid form as it can fit almost everywhere.
 \newline
 
 \textbf{Type of trip}
 Depending on the nature of the trip different packing lists will be necessary because each trip might require different items.
+\newline
+
+\textbf{Space for Souvenirs}
+The program could pack the items in a way, so there will be allocated place for the souvenirs to buy on the trip.
 \newline
